
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct snd_kcontrol {int dummy; } ;
struct TYPE_3__ {int * value; } ;
struct TYPE_4__ {TYPE_1__ integer; } ;
struct snd_ctl_elem_value {TYPE_2__ value; } ;
struct hda_multi_out {int share_spdif; } ;


 struct hda_multi_out* snd_kcontrol_chip (struct snd_kcontrol*) ;

__attribute__((used)) static int spdif_share_sw_put(struct snd_kcontrol *kcontrol,
         struct snd_ctl_elem_value *ucontrol)
{
 struct hda_multi_out *mout = snd_kcontrol_chip(kcontrol);
 mout->share_spdif = !!ucontrol->value.integer.value[0];
 return 0;
}
